--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -281,7 +281,7 @@
           <div class="col-md-12">
             <div class="card-body">
               <h5 class="card-title">
-                UX Desiner</h5>
+                Social Media Marketing</h5>
               <p>
                 <i class="bi bi-building"></i>
                 Google - (Rimotly)</p>
@@ -315,7 +315,7 @@
           <div class="col-md-12">
             <div class="card-body">
               <h5 class="card-title">
-                Jonior Java Developer</h5>
+                Email Marketing</h5>
               <p>
                 <i class="bi bi-building"></i>
                 Microsoft - (Part-Time)</p>
@@ -349,7 +349,7 @@
           <div class="col-md-12">
             <div class="card-body">
               <h5 class="card-title">
-                Accountant</h5>
+                Brand Management</h5>
               <p>
                 <i class="bi bi-building"></i>
                 Cack Bank - (Full-Time)</p>
@@ -410,10 +410,10 @@ style="margin-top: 3rem"
         <div class="col-md-12">
           <div class="card-body">
             <h5 class="card-title">
-              UX Desiner</h5>
+              Chef</h5>
             <p>
               <i class="bi bi-building"></i>
-              Google - (Rimotly)</p>
+              KFC</p>
 
             <p>
               <i class="bi bi-geo-alt"></i>
@@ -444,10 +444,10 @@ style="margin-top: 3rem"
         <div class="col-md-12">
           <div class="card-body">
             <h5 class="card-title">
-              Jonior Java Developer</h5>
+             Kitchen Helper</h5>
             <p>
               <i class="bi bi-building"></i>
-              Microsoft - (Part-Time)</p>
+              Pizza Hut - (Part-Time)</p>
 
             <p>
               <i class="bi bi-geo-alt"></i>
@@ -478,10 +478,10 @@ style="margin-top: 3rem"
         <div class="col-md-12">
           <div class="card-body">
             <h5 class="card-title">
-              Accountant</h5>
+              Waiter</h5>
             <p>
               <i class="bi bi-building"></i>
-              Cack Bank - (Full-Time)</p>
+              Niyalo - (Full-Time)</p>
 
             <p>
               <i class="bi bi-geo-alt"></i>
@@ -539,10 +539,10 @@ style="margin-top: 3rem"
         <div class="col-md-12">
           <div class="card-body">
             <h5 class="card-title">
-              UX Desiner</h5>
+             Project Manager</h5>
             <p>
               <i class="bi bi-building"></i>
-              Google - (Rimotly)</p>
+              CG Industry- (Rimotly)</p>
 
             <p>
               <i class="bi bi-geo-alt"></i>
@@ -573,10 +573,10 @@ style="margin-top: 3rem"
         <div class="col-md-12">
           <div class="card-body">
             <h5 class="card-title">
-              Jonior Java Developer</h5>
+              Manager</h5>
             <p>
               <i class="bi bi-building"></i>
-              Microsoft - (Part-Time)</p>
+              Bhatbhateni - (Part-Time)</p>
 
             <p>
               <i class="bi bi-geo-alt"></i>
@@ -610,7 +610,7 @@ style="margin-top: 3rem"
               Accountant</h5>
             <p>
               <i class="bi bi-building"></i>
-              Cack Bank - (Full-Time)</p>
+              Nabil Bank - (Full-Time)</p>
 
             <p>
               <i class="bi bi-geo-alt"></i>
@@ -669,14 +669,14 @@ style="margin-top: 3rem"
         <div class="col-md-12">
           <div class="card-body">
             <h5 class="card-title">
-              UX Desiner</h5>
+              Finance</h5>
             <p>
               <i class="bi bi-building"></i>
-              Google - (Rimotly)</p>
+          KMC</p>
 
             <p>
               <i class="bi bi-geo-alt"></i>
-              Pokhara
+           KTM
             </p>
             <p>
               <i class="bi bi-cash-stack"></i>
@@ -703,14 +703,14 @@ style="margin-top: 3rem"
         <div class="col-md-12">
           <div class="card-body">
             <h5 class="card-title">
-              Jonior Java Developer</h5>
+              Computer Teacher</h5>
             <p>
               <i class="bi bi-building"></i>
-              Microsoft - (Part-Time)</p>
+              KMGSS </p>
 
             <p>
               <i class="bi bi-geo-alt"></i>
-              KTM
+              Butwal
             </p>
             <p>
               <i class="bi bi-cash-stack"></i>
@@ -737,10 +737,10 @@ style="margin-top: 3rem"
         <div class="col-md-12">
           <div class="card-body">
             <h5 class="card-title">
-              Accountant</h5>
+              Physics </h5>
             <p>
               <i class="bi bi-building"></i>
-              Cack Bank - (Full-Time)</p>
+              SSHSS - (Full-Time)</p>
 
             <p>
               <i class="bi bi-geo-alt"></i>
