--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -740,7 +740,7 @@ style="margin-top: 3rem"
               Physics </h5>
             <p>
               <i class="bi bi-building"></i>
-              SSHSS - (Full-Time)</p>
+              SHSS- (Full-Time)</p>
 
             <p>
               <i class="bi bi-geo-alt"></i>
